# ChessEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  board.cpp  board.h  chess.cpp  chess.h  chess.hpp  helloworld.cpp  main.cpp  post-changes.txt  pre-changes.txt  tests.cpp
