cmake_minimum_required(VERSION 3.28.3)
project(chess)
set(C_MAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -march=native -mtune=native")
set(SOURCE_FILES chess.hpp chess.cpp main.cpp)
set(NUM_THREADS 8)
add_compile_definitions(NUM_THREADS=${NUM_THREADS})
add_executable(chess ${SOURCE_FILES})
add_executable(check chess.hpp chess.cpp tests.cpp)
